fixed section spacing, no overflow, animation stops at 10s

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -64,8 +64,8 @@ img {
 }
 
 // section heights
-header, .container, .user-input-locale,  {
-	height: 100vh;
+header, .container, .user-input-locale  {
+	min-height: 100vh;
 }
 
 //general button styling
